# Crowdfunding-django

./: .gitignore  AUTH.md  INSTALLION.md  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: middleware.py  models.py  serializers.py  urls.py  views.py
crowdfunding/: settings.py  urls.py
projects/: models.py  permissions.py  serializers.py  urls.py  views.py
projects/management/commands/: seed_data.py
projects/migrations/: 0001_initial.py  0002_project_user_projectimages.py  0003_project_is_featured.py  0004_comments_ratting.py  0005_alter_comments_project_alter_comments_user_and_more.py  0006_commentsreports_created_at_donation_created_at_and_more.py  0007_category_project_is_accepted_alter_project_is_active_and_more.py  0008_project_thumbnail.py  0009_alter_comments_options_alter_commentsreports_comment_and_more.py  0010_alter_commentsreports_user_alter_donation_user_and_more.py
templates/: activation_email.html
